# pytesmo

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CHANGES.md  CHANGES.rst  CHANGES.txt  DEVELOPERS_GUIDE.md  LICENSE.txt  MANIFEST  MANIFEST.in  README.rst  README.txt  appveyor.yml  dev_requirements.txt  doc_requirements.txt  environment.yml  local.yml  optional_requirements.txt  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  rtd_requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yml  test.yml
.pytest_cache/v/cache/: lastfailed  nodeids
appveyor/: install.ps1
docs/: .goutputstream-UNCD4W  Makefile  Makefile~  Read_H_SAF_images.rst  Triple collocation.ipynb  Triple collocation.rst  anomalies.rst  compare_ASCAT_ISMN.rst  conf.py  contributing.rst  data_preparation_ASCAT_ISMN.ipynb  data_preparation_ASCAT_ISMN.rst  developers_guide.rst  env.yml  environment.yml  examples.rst  index.rst  introduction.rst  make.bat  moduleindex.rst  modules.rst  old_examples.rst  plot_ISMN.rst  plot_ascat_data.rst  pytesmo.grid.rst  pytesmo.io.ismn.rst  pytesmo.io.ismn.test.rst  pytesmo.io.rst  pytesmo.io.sat.test.rst  pytesmo.time_series.rst  pytesmo.time_series.rst~  pytesmo.timedate.rst  read_ASCAT_H25.rst  requirements.txt  rtd_env.yml  setup_validation_ASCAT_ISMN.ipynb  setup_validation_ASCAT_ISMN.rst  temporal_matching.ipynb  temporal_matching.rst  validation_framework.ipynb  (+1 more)
docs/Read_H_SAF_images_files/: Read_H_SAF_images_11_0.text  Read_H_SAF_images_14_0.text  Read_H_SAF_images_15_0.text  Read_H_SAF_images_16_0.text  Read_H_SAF_images_18_0.text  Read_H_SAF_images_19_0.text  Read_H_SAF_images_21_0.text  Read_H_SAF_images_24_0.text  Read_H_SAF_images_25_0.text  Read_H_SAF_images_28_0.text  Read_H_SAF_images_28_1.text  Read_H_SAF_images_28_2.text  Read_H_SAF_images_28_3.text  Read_H_SAF_images_30_0.text  Read_H_SAF_images_30_1.text  Read_H_SAF_images_30_2.text  Read_H_SAF_images_30_3.text  Read_H_SAF_images_7_0.text  Read_H_SAF_images_9_0.text
docs/_build/doctrees/: compare_ASCAT_ISMN.doctree  environment.pickle  examples.doctree  index.doctree  introduction.doctree  modules.doctree  plot_ISMN.doctree  pytesmo.doctree  (+8 more)
docs/anomalies_files/: anomalies_2_0.text  anomalies_2_1.text  anomalies_3_0.text  anomalies_3_1.text  anomalies_4_0.text  anomalies_4_1.text  anomalies_5_0.text  anomalies_5_1.text
docs/compare_ASCAT_ISMN_files/: Thumbs.db  compare_ASCAT_ISMN_5_0.text  compare_ASCAT_ISMN_5_1.text  compare_ASCAT_ISMN_5_2.text  compare_ASCAT_ISMN_5_3.text  compare_ASCAT_ISMN_5_4.text  compare_ASCAT_ISMN_5_5.text  compare_ASCAT_ISMN_5_6.text  compare_ASCAT_ISMN_5_7.text
docs/examples/: Triple collocation.ipynb  Triple collocation.rst  anomalies.ipynb  anomalies.rst  compare_ASCAT_ISMN.ipynb  compare_ASCAT_ISMN.rst  dct_pls.ipynb  index.rst  swi_calc.ipynb  swi_calc.rst  temporal_collocation.ipynb  triple_collocation.ipynb  validation_framework.ipynb  validation_framework.rst
docs/plot_ISMN_files/: Thumbs.db  plot_ISMN_2_0.text  plot_ISMN_3_0.text  plot_ISMN_4_0.text  plot_ISMN_5_0.text  plot_ISMN_6_0.text  plot_ISMN_7_0.text  plot_ISMN_8_0.text  plot_ISMN_9_0.text
docs/plot_ascat_data_files/: Thumbs.db  plot_ascat_data_3_0.text  plot_ascat_data_4_0.text  plot_ascat_data_5_0.text  plot_ascat_data_6_0.text  plot_ascat_data_7_0.text  plot_ascat_data_8_0.text
docs/read_ASCAT_H25_files/: read_ASCAT_H25_0_0.text  read_ASCAT_H25_1_0.text  read_ASCAT_H25_2_0.text  read_ASCAT_H25_2_1.text  read_ASCAT_H25_3_0.text
docs/swi_calculation/: swi_calc.ipynb  swi_calc.rst
examples/: Read_H_SAF_images.py  anomalies.py  compare_ISMN_ASCAT.py  data_preparation_ASCAT_ISMN.py  plot_ASCAT_data.py  plot_ISMN_data.py  read_ASCAT_H25.py  setup_validation_ASCAT_ISMN.py  validation_framework.ipynb  validation_framework.py
local_scripts/: temp_match.py
new_tcol/: case_ecol.py  innerouter.py  new_applier.py
new_tcol/new_results_manager/: results_manager.py  test_new_results_manager.py
pytesmo/: __init__.py  _version.py  anomaly.py  df_metrics.py  metrics.py  scaling.py  temporal_matching.py  utils.py
pytesmo/colormaps/: SWI_ASCAT.cmap
pytesmo/grid/: __init__.py  grids.py  nearest_neighbor.py  netcdf.py  resample.py
pytesmo/io/: __init__.py  dataset_base.py
pytesmo/time_series/: __init__.py  anomaly.py  filtering.py  filtering_cy.pyx  filters.c  filters.pyx  grouping.py  plotting.py
pytesmo/timedate/: __init__.py  dekad.py  julian.py
pytesmo/validation_framework/: adapters.py  compr_pickle.py  data_manager.py  data_scalers.py  metric_calculators.py  results_manager.py  setup_validation.py  start_validation.py  temporal_matchers.py  validation.py
src/pytesmo/: __init__.py  cdf_matching.py  df_metrics.py  metrics.py  scaling.py  temporal_matching.py  utils.py
tests/: cci44_merra2_gldas21_era5_at_-91.625_32.875.csv  conftest.py  tc_metrics.py  test_cdf_matching.py  test_dataset_base.py  test_dctpls.py  test_df_metrics.py  test_metrics.py  test_metrics_deprecated.py  test_result_managers.py  test_scaling.py  test_temporal_matching.py  test_utils.py  test_validation.py
tests/test_docs/: test_examples.py
tests/test_grid/: test_grid.py  test_netcdf.py  test_resample.py
tests/test_ismn/: test_interface.py  test_readers.py
tests/test_netcdf_io/: test_netcdf_dataset.py
tests/test_sat/: test_ascat.py  test_ers.py  test_h_saf.py
tests/test_time_series/: test_anomaly.py  test_filtering.py  test_filters.py  test_grouping.py  test_plotting.py
tests/test_timedate/: test_dekad.py  test_julian.py
tests/test_validation_framework/: ASCAT.csv  ISMN.csv  test_adapters.py  test_data_averager.py  test_data_manager.py  test_data_scalers.py  test_datasets.py  test_error_handling.py  test_metric_calculators.py  test_metric_calculators_adapters.py  test_temporal_matchers.py  test_upscaling.py  test_validation.py  utils.py
tests/test_validation_framwork/: test_adapters.py  test_data_manager.py  test_datasets.py  test_metric_calculators.py  test_validation.py
(+128 files in other folders)
