# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pytesmo
description = Python Toolbox for the evaluation of soil moisture observations
author = TU Wien
author-email = remote.sensing@geo.tuwien.ac.at
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://www.geo.tuwien.ac.at/
project-urls =
    Documentation = https://pytesmo.readthedocs.io/
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
                 numpy>=1.7.0
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires = numpy>=1.7.0
                   scipy>=0.12
                   pandas>=0.11.0,!=0.15.2
                   matplotlib>=1.2.0
                   netCDF4>=1.0.1
                   pygeogrids
                   pygeobase>=0.3.15
                   pynetcf>=0.1.17
                   ascat>=1.0
                   ismn>=0.3
                   configparser
                   pykdtree
                   repurpose>=0.7.1
                   cadati>=0.0.2
                   Cython>=0.29.21
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.6

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install pytesmo[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest==5.0.1
    pytest-mpl
    pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = pytesmo.module:function
# For example:
# console_scripts =
#     fibonacci = pytesmo.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov pytesmo --cov-report term-missing
    --cov-append
    --verbose
norecursedirs =
    dist
    build
    .tox
markers =
    full_framework : marks slow test that use the whole validation framework (deselect with '-m "not full_framework"')
    slow : marks slow tests (deselect with '-m "not slow"')
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = pytesmo
extensions =
    no_skeleton
