# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pytesmo
description = Python Toolbox for the evaluation of soil moisture observations
author = TU Wien
author-email = remote.sensing@geo.tuwien.ac.at
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://www.geo.tuwien.ac.at/
project-urls =
    Documentation = https://pytesmo.readthedocs.io/
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    importlib-metadata; python_version<"3.8"
    numpy>=1.7.0
    scipy>=0.12
    pandas>=0.11.0,!=0.15.2
    matplotlib>=1.2.0
    netCDF4>=1.0.1
    pygeogrids
    pygeobase>=0.3.15
    pynetcf>=0.1.17
    configparser
    pykdtree
    repurpose>=0.7.1
    cadati>=0.0.2
    Cython>=0.29.21,!=0.23.26
    numba
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.6

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install pytesmo[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = pytesmo.module:function
# For example:
# console_scripts =
#     fibonacci = pytesmo.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov
    --cov-report term-missing
    --cov-append
    --verbose
norecursedirs =
    dist
    build
    .tox
markers =
    full_framework : marks slow test that use the whole validation framework (deselect with '-m "not full_framework"')
    slow : marks slow tests (deselect with '-m "not slow"')
testpaths = tests
# This removes some of the warnings that show up with pytest but are not an issue
filterwarnings =
    # external deprecation
    ignore:GriddedStaticBase is deprecated:DeprecationWarning
    # internal deprecation upon import
    ignore:pytesmo.timdate.julian has moved:DeprecationWarning
    ignore:pytesmo.timdate.dekad has moved:DeprecationWarning
    # due to constant test data for PearsonR
    ignore:An input array is constant:
    # some of the scaling tests cause this
    ignore:The bins have been resized:UserWarning
    # this is due to the test data
    ignore:Dropping duplicated indices in reference:UserWarning
    ignore:No timezone given for reference:UserWarning
    # this comes from somewhere else
    ignore:`np.bool` is a deprecated alias for the builtin `bool`
    # this comes from the `test_cci` in `test_data_averager`
    ignore: IOError in reading ISMN data

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
extend-ignore = F403
per-file-ignores = __init__.py:F401
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.0
package = pytesmo
extensions =
    no_skeleton
